test/bad/def_not_iff.pa
def foo for a b {
    foo(a,b) -> a = b
}
